--- a/css/main.css
+++ b/css/main.css
@@ -145,8 +145,8 @@ h1, h2, h3, h4, h5, h6 {
     height: 32px;
 
     border-radius: 32767px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
 
     text-decoration: none;
     font-family: fredoka-one-regular;
@@ -216,8 +216,10 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-block;
 
     border-radius: 32767px;
-    padding: 1.25rem;
     background: var(--md-sys-color-primary);
+    padding: 0.75em;
+    padding-left: 1.25em;
+    padding-right: 1.25em;
     
     text-decoration: none;
     font-size: 1.25rem;
@@ -289,15 +291,15 @@ h1, h2, h3, h4, h5, h6 {
     }
 
     .title-bar > #expandMenu {
-        padding-top: 8px;
-        padding-bottom: 8px;
+        padding-top: 0.25em;
+        padding-bottom: 0.25em;
     }
 
     .title-bar > .menu-item {
         display: none;
         flex: 100%;
-        padding-top: 8px;
-        padding-bottom: 8px;
+        padding-top: 0.25em;
+        padding-bottom: 0.25em;
         justify-content: center;
     }
 }
