--- a/css/projects.css
+++ b/css/projects.css
@@ -54,8 +54,8 @@
     border-radius: 32767px;
     background: var(--md-sys-color-surface-container);
     padding: 0.25em;
-    padding-left: 0.5em;
-    padding-right: 0.5em;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
     font-family: sans-serif;
     font-size: 1rem;
     color: var(--md-sys-color-on-surface-container);
